improved sticky banner

--- a/src/App.sass
+++ b/src/App.sass
@@ -1,17 +1,33 @@
 $white: rgb(243, 243, 243)
   
+.App
+  // display: flex
+  // flex-direction: column
+
+.App-top
+  // height: 100vh
+  // display: flex
+  // flex-direction: column
+  // overflow: visible
+
+
 .main-header 
   position: -webkit-sticky // Safari
   position: sticky
+  // justify-self: flex-start
   background-color: $white
-  top: 0
+  top: 20px
+  border-radius: 100vmax
+  padding: 3rem
+  margin-left: 3rem
+  margin-right: 3rem
 
-  -webkit-box-shadow: 0 0 0.5rem 0 rgb(0 0 0 / 15%)
-  box-shadow: 0 0 1rem #00000026
+  -webkit-box-shadow: 0 0 0.5rem 0 rgb(0 0 0 / 30%)
+  box-shadow:  0 0 0.5rem 0 rgb(0 0 0 / 30%)
   background-color: #fff
 
 .appreciation
-  background-color: rgb(44, 96, 111)
+  background-color: rgb(75, 54, 21)
   color: $white
   text-align: center
   padding: 1rem
