--- a/src/pages/Landing.sass
+++ b/src/pages/Landing.sass
@@ -1,2 +1,16 @@
 .w-100
 	width: 100%
+
+.rec-1
+	position: relative
+	left: 6rem
+	top: 4rem
+	width: 18rem
+	height: 24rem
+	background-color: red
+
+.rectangles
+	// display: flex
+	// flex-grow: 1
+	margin-top: 1.5rem
+	margin-bottom: 1.5rem  
