--- a/src/App.sass
+++ b/src/App.sass
@@ -31,6 +31,7 @@ $white: rgb(243, 243, 243)
   color: $white
   text-align: center
   padding: 1rem
+  z-index: 50
 
 .main-content
   padding: 5rem
