parallax more details

--- a/src/App.sass
+++ b/src/App.sass
@@ -1,14 +1,14 @@
 $white: rgb(243, 243, 243)
   
-.App
-  // display: flex
-  // flex-direction: column
-
-.App-top
-  // height: 100vh
-  // display: flex
-  // flex-direction: column
-  // overflow: visible
+.blurbs-wrapper
+  display: flex
+  flex-direction: column
+  height: 100vh
+  // background-image: url("https://media.istockphoto.com/id/1216782625/photo/chilling-out-at-a-coffee-shop.jpg?s=612x612&w=0&k=20&c=3AKnRvK_Skw9ClwGD9yGtDifGiaqQTireIJJPE4B4no=")
+  // background-color: #929191cb
+  // background-repeat: no-repeat
+  // background-position: center //; /* Center the image */
+  // background-size: cover, cover
 
 
 .main-header 
@@ -19,8 +19,9 @@ $white: rgb(243, 243, 243)
   top: 20px
   border-radius: 100vmax
   padding: 3rem
-  margin-left: 3rem
-  margin-right: 3rem
+  margin-left: 5rem
+  margin-right: 5rem
+  z-index: 1000
 
   -webkit-box-shadow: 0 0 0.5rem 0 rgb(0 0 0 / 30%)
   box-shadow:  0 0 0.5rem 0 rgb(0 0 0 / 30%)
