--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
 	margin: 0;
 	min-height: 100%;
-	font-family: Gotham A,Gotham B,sans-serif;
+	font-family: Gotham A, Gotham B, sans-serif;
 }
 
 .text-content {
@@ -22,23 +22,28 @@ html {
 	width: 100%;
 }
 
+[data-first-cls] {
+	display: none;
+}
+
 /* width */
 ::-webkit-scrollbar {
 	width: 10px;
-  }
-  
-  /* Track */
-  /* ::-webkit-scrollbar-track { */
-	/* background: #f1f1f1; */
-	/* background: rgb(75, 54, 21); */
-  /*} */
-  
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
+}
+
+/* Track */
+/* ::-webkit-scrollbar-track { */
+/* background: #f1f1f1; */
+/* background: rgb(75, 54, 21); */
+/*} */
+
+/* Handle */
+::-webkit-scrollbar-thumb {
 	background: hsl(37, 56%, 10%);
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-	background: hsl(37, 56%, 19%);;
-  }
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+	background: hsl(37, 56%, 19%);
+	;
+}
