more mobile compatibility

--- a/src/App.sass
+++ b/src/App.sass
@@ -1,4 +1,4 @@
-@use "./colors"
+@use "./constants"
     
 .blurbs-wrapper
   display: flex
@@ -15,7 +15,7 @@
   position: -webkit-sticky // Safari
   position: sticky
   // justify-self: flex-start
-  background-color: colors.$white
+  background-color: constants.$white
   top: 20px
   border-radius: 100vmax
   padding: 3rem
@@ -28,8 +28,8 @@
   background-color: #fff
 
 .appreciation
-  background-color: colors.$splash-primary
-  color: colors.$white
+  background-color: constants.$splash-primary
+  color: constants.$white
   text-align: center
   padding: 1rem
   z-index: 50
