--- a/src/components/ParallaxImageSplit/ParallaxImageSplit.sass
+++ b/src/components/ParallaxImageSplit/ParallaxImageSplit.sass
@@ -24,6 +24,10 @@
 .parallax-image-wrapper-1
 	width: 100%
 
+.text-section-image
+	display: flex
+	align-items: center
+
 @keyframes fade-in-parallax-image
 	from
 		opacity: 0%
