--- a/src/pages/Landing.sass
+++ b/src/pages/Landing.sass
@@ -1,4 +1,4 @@
-@use "../colors"
+@use "../constants"
 
 @keyframes fade-in
 	0%
@@ -101,13 +101,13 @@
 .reviews
 	// margin-top: 2rem
 	box-sizing: border-box
-	background-color: colors.$splash-primary
+	background-color: constants.$splash-primary
 	padding: 3rem
 	margin-top: 6rem
 
 .reviews-title
 	// margin-top: 6.5rem
-	color: colors.$text-primary-contrast
+	color: constants.$text-primary-contrast
 	font-weight: bold
 	margin-bottom: 2rem
 	text-align: center
@@ -115,7 +115,7 @@
 
 .reviews-subtitle
 	text-align: center
-	color: colors.$text-secondary
+	color: constants.$text-secondary
 	font-size: 175%
 
 @keyframes throb
@@ -249,15 +249,20 @@ $chip-animations: throb 3s ease-in-out 0s infinite forwards, fade-in 1s 3.2s 1 f
 @media screen and (max-width: 850px)
 	.splash-image
 		width: 50%
+
 	.blurbs-wrapper #title
 		font-size: 500%
+
 	.landing-nav
 		margin-top: 2rem
+
+	.reviews
+		font-size: 80%
 
 ///
 /// MAJOR SHIFT IN LAYOUT
 ///
-@media screen and (max-width: 720px)
+@media screen and (max-width: constants.$first-cls)
 	.welcome-title
 		justify-content: unset
 
@@ -269,18 +274,21 @@ $chip-animations: throb 3s ease-in-out 0s infinite forwards, fade-in 1s 3.2s 1 f
 			animation: fade-in 0.75s 1 forwards, moving-gradient 15s ease infinite
 			margin-right: 5rem
 
-		& nav.landing-nav
-			margin-top: 0
-			padding: 4rem
-			width: 100%
-			box-sizing: border-box
+	.landing-nav
+		margin-top: 0
+		padding: 2rem
+		width: 100%
+		box-sizing: border-box
+
+		& a
+			text-align: center
 
 	a#chip, .splash-image
 		display: none
 
 	.mobile-welcome[data-first-cls]
-		display: unset
-		font-size: 200%
+		display: unset !important
+		font-size: 230%
 		text-align: justify
 		margin-left: 6rem
 		margin-right: 6rem
@@ -302,3 +310,64 @@ $chip-animations: throb 3s ease-in-out 0s infinite forwards, fade-in 1s 3.2s 1 f
 	.splash-wrapper
 		flex-grow: unset
 		flex-direction: column-reverse
+
+	.parallax-image-text-section
+		display: flex
+		flex-direction: column
+		align-items: center
+
+		& > .first-description
+			text-align: center
+
+		&:nth-child(1)
+			flex-direction: column-reverse
+			padding-bottom: 2rem
+
+@media screen and (max-width: 530px)
+	main.main-content
+		padding: 2rem
+
+	.mobile-welcome[data-first-cls]
+		font-size: 160%
+
+	.reviews
+		font-size: 50%
+		padding: 1rem 
+		margin-top: 1.5rem
+
+		& > .reviews-title
+			margin-bottom: .5rem
+
+@media screen and (max-width: 430px)
+	.splash-image[data-second-cls]
+		margin-left: auto
+		margin-right: auto
+
+		& > img
+			width: 100%
+
+		margin-top: 3rem
+		display: flex !important
+		justify-content: center
+
+	.welcome-title 
+		width: 100%
+		& > div #title
+			font-size: 500%
+
+		display: flex
+		justify-content: center
+
+	nav.landing-nav
+		padding: 2rem
+		font-size: 50%
+		grid-template-columns: 1fr
+
+		& a
+			margin-left: 7rem
+			margin-right: 7rem
+			margin-bottom: 1rem
+		// flex-direction: column !important
+
+	.blurbs-wrapper
+		font-size: 50%
