--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,12 @@ body {
 	color: #918888;
 }
 
+/*
+* {
+	border: solid red 2px;
+}
+*/
+
 .center-h {
 	display: flex;
 	justify-content: center;
@@ -15,15 +21,17 @@ body {
 
 html {
 	scroll-behavior: smooth;
-	overflow-x: none
+	/* overflow-x: hidden; */
+	box-sizing: border-box;
 }
 
 .w-100 {
 	width: 100%;
 }
 
-[data-first-cls] {
-	display: none;
+[data-first-cls],
+[data-second-cls] {
+	display: none !important;
 }
 
 /* width */
